PP-21 fixed alignment for all screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@ body {
   flex-direction: column;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 body > * {
   flex-shrink: 0;
 }
